@startuml

Location "1" --> "1" LocationDetail
Location "1" --> "*" Product

class Location {
    name : String
    imageUrl : String
    city: String
    street: String
    zipCode: String
    type: LocationType
}

enum LocationType
{
    BAR
    CAFE
}

class LocationDetail {
    ownerName: String
    donationLink: String
    description: String
    latitude: number
    longitude: number
    googlePlaceId: String
    website: String
}

class Product {
    name: String
    price: number
    type: ProductType
}

enum ProductType {
    COFFEE
    CAKE
    BEER
    BURGER
}

@enduml
